--- a/src/components/CountriesFlag.module.css
+++ b/src/components/CountriesFlag.module.css
@@ -1,31 +1,32 @@
-.search {
+/* .search {
   width: 400px;
   height: 24px;
   padding: 10px;
   margin: 5px;
   background-color: rgb(225, 225, 225);
+  position: fixed;
 
 
-}
+} */
 
-.countriesGrid {
+/* .countriesGrid {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
   min-height: 300px;
-}
+} */
 
-.countryCard {
+/* .countryCard {
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid black;
   padding: 10px;
   width: 200px;
-}
+} */
 
-.flag {
+/* .flag {
   width: 100px;
   height: 100px;
-}
+} */
